--- a/index.html
+++ b/index.html
@@ -8,21 +8,37 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="text-center container">Pan Tadeusz, czyli ostatni zajazd na Litwie: historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierszem</h1>
-    <div class="list-group">
-        <a class="list-group-item" href="./k1.html">Księga 1</a>
-        <a class="list-group-item" href="./k2.html">Księga 2</a>
-        <a class="list-group-item" href="./k3.html">Księga 3</a>
-        <a class="list-group-item" href="./k4.html">Księga 4</a>
-        <a class="list-group-item" href="./k5.html">Księga 5</a>
-        <a class="list-group-item" href="./k6.html">Księga 6</a>
-        <a class="list-group-item" href="./k7.html">Księga 7</a>
-        <a class="list-group-item" href="./k8.html">Księga 8</a>
-        <a class="list-group-item" href="./k9.html">Księga 9</a>
-        <a class="list-group-item" href="./k10.html">Księga 10</a>
-        <a class="list-group-item" href="./k11.html">Księga 11</a>
-        <a class="list-group-item" href="./k12.html">Księga 12</a>
+    <nav class="navbar sticky-top bg-body-tertiary">
+        <div class="container-fluid">
+            <h1 class="text-center container">Pan Tadeusz, czyli ostatni zajazd na Litwie: historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierszem</h1>
+        </div>
+    </nav>
+    <div class="row g-0 text-center">
+        <div class="col-6 col-md-2">
+            <div class="list-group">
+                <a class="list-group-item" href="./k1.html">Księga 1</a>
+                <a class="list-group-item" href="./k2.html">Księga 2</a>
+                <a class="list-group-item" href="./k3.html">Księga 3</a>
+                <a class="list-group-item" href="./k4.html">Księga 4</a>
+                <a class="list-group-item" href="./k5.html">Księga 5</a>
+                <a class="list-group-item" href="./k6.html">Księga 6</a>
+                <a class="list-group-item" href="./k7.html">Księga 7</a>
+                <a class="list-group-item" href="./k8.html">Księga 8</a>
+                <a class="list-group-item" href="./k9.html">Księga 9</a>
+                <a class="list-group-item" href="./k10.html">Księga 10</a>
+                <a class="list-group-item" href="./k11.html">Księga 11</a>
+                <a class="list-group-item" href="./k12.html">Księga 12</a>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-10">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Pan_Tadeusz_1834.jpeg" alt="Pan Tadeusz">
+        </div>
     </div>
+    <nav class="navbar fixed-bottom bg-body-tertiary">
+        <div class="container-fluid">
+            <h6 class="text-center container">Grzegorz Wójcik Akademia Nauk Stosowanych</h6>
+        </div>
+    </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
